--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "lucide-react": "^0.338.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
