--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "lucide-react": "^0.338.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
@@ -23,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-textarea-autosize": "^8.5.3",
     "tailwind-merge": "^2.2.1",
     "zod": "^3.22.4"
   },
