--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/upstash-redis-adapter": "^3.0.4",
     "@upstash/redis": "^1.28.4",
